[package]
name = "swtormeter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["std"], default-features = false }
notify = { version = "6.1.1", features = ["mio"] }
tokio = { version = "1.35.1", features = ["full", "mio"] }
